fix checkstyle recommendations